2012-12-18  Nico Weber  <thakis@chromium.org>

        Fix broken loop in style guide
        https://bugs.webkit.org/show_bug.cgi?id=105346

        Reviewed by Ryosuke Niwa.

        Found by Sean Silva <silvas@purdue.edu>

        * coding/coding-style.html:

2012-12-11  Ryosuke Niwa  <rniwa@webkit.org>

        Add instructions on how to build WebKit on Xcode 4 to build.html
        https://bugs.webkit.org/show_bug.cgi?id=104739

        Reviewed by Daniel Bates.

        Set the build directories to WebKitBuild.

        * building/build.html:

2012-11-24  Daniel Bates  <dbates@webkit.org>

        Substitute "use" for "user" in sentence about naming convention for
        enum members so that it reads well.

        * coding/coding-style.html:

2012-11-20  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Add Samsung to security vendor member list
        https://bugs.webkit.org/show_bug.cgi?id=102863

        Reviewed by Sam Weinig.

        * security/security-group-members.html: Add Samsung members.

2012-10-31  Adam Barth  <abarth@webkit.org>

        technical-articles.html should link to my talk on how WebKit works
        https://bugs.webkit.org/show_bug.cgi?id=100867

        Reviewed by Tony Chang.

        * coding/technical-articles.html:

2012-10-29  Eric Seidel  <eric@webkit.org>

        Technical Articles should link to an old talk I gave
        https://bugs.webkit.org/show_bug.cgi?id=100624

        Reviewed by Adam Barth.

        * coding/technical-articles.html:

2012-09-13  Ryosuke Niwa  <rniwa@webkit.org>

        Another typo fix. Apparently, I "fixed" the wrong line in the previous commit.

        * coding/coding-style.html:

2012-09-13  Ryosuke Niwa  <rniwa@webkit.org>

        Fix a typo per Darin's comment.

        * coding/coding-style.html:

2012-09-13  Ryosuke Niwa  <rniwa@webkit.org>

        Add a style guide rule for signed and unsigned int
        https://bugs.webkit.org/show_bug.cgi?id=96682
