@@ -1,3 +1,15 @@
+2012-12-20  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Add a sample change log entry to contributing.html
+        https://bugs.webkit.org/show_bug.cgi?id=105506
+
+        Reviewed by Alexey Proskuryakov.
+
+        Added a sample change log to the page directly people skimming through the page will still
+        see it. Also mention that prepare-ChangeLogs is automatically ran by webkit-patch upload.
+
+        * coding/contributing.html:
+
 2012-12-18  Nico Weber  <thakis@chromium.org>
 
         Fix broken loop in style guide
